deploy/1.23/control-plane/ingress/nginx/keycloak-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: keycloak
  name: cno-auth
spec:
  ingressClassName: nginx
  rules:
  - host: cno-auth.cluster.beopenit.com
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8443
        path: /
        pathType: ImplementationSpecific
